fix: footer's width; fix: titel's break on the banner

--- a/src/components/banner/style.scss
+++ b/src/components/banner/style.scss
@@ -64,7 +64,7 @@
   }
 }
 
-@media (max-width: 858px) {
+@media (max-width: 873px) {
   .banner {
     .img-container {
       h1 {
