--- a/src/components/footer/styles.scss
+++ b/src/components/footer/styles.scss
@@ -1,7 +1,7 @@
 @import "../../../variables.scss";
 
 .footer {
-  width: 100%;
+  width: 100vw;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
